test/spec_vectors/simd_i8x16_arith2/fail/module_13.wat
(module (func (result v128) (i8x16.popcnt (f32.const 0.0))))